# aoc-2025-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: util.hpp
include/days/: day01.hpp  day02.hpp
src/: main.cpp  util.cpp
src/days/: day01.cpp  day02.cpp
tests/days/: testDay01.cpp
